Various generic collections
Numerous implementations of collections, such as
1) generic list with 3 types of iterators,
2) generic bounded list with exceptions
3) generic stack
4) array stack with iterator

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ $RECYCLE.BIN/
 *.lnk
 /MatrixOfSpecialForm/nbproject/private/
 /MatrixOfSpecialForm/build/
+/MyListWithLastReference/nbproject/private/
+/MyListWithLastReference/build/
+/GenericCollections/build/
