--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ $RECYCLE.BIN/
 /MyListWithLastReference/nbproject/private/
 /MyListWithLastReference/build/
 /GenericCollections/build/
+/DeepCopyTool/nbproject/private/
+/DeepCopyTool/build/
