Class 'Circle' with three various comparators
1) xComparator: circle is considered less if his (x-rad) is less
2) yComparator: circle is considered less if his (y-rad) is less
3) radComparator: circle is considered less if his radius is less

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,5 @@ $RECYCLE.BIN/
 /GenericCollections/build/
 /DeepCopyTool/nbproject/private/
 /DeepCopyTool/build/
+/ComparatorPractice/nbproject/private/
+/ComparatorPractice/build/
