--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ $RECYCLE.BIN/
 /DeepCopyTool/build/
 /ComparatorPractice/nbproject/private/
 /ComparatorPractice/build/
+/Genome/nbproject/private/
+/Genome/build/
