--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,8 @@ $RECYCLE.BIN/
 /ComparatorPractice/build/
 /Genome/nbproject/private/
 /Genome/build/
+/JavaApplication17/nbproject/private/
+/Syncronization/nbproject/private/
+/Syncronization/build/
+/ConcurrentFeatures/nbproject/private/
+/ConcurrentFeatures/build/
