Project which helps save data about family members

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,7 @@ $RECYCLE.BIN/
 /Syncronization/build/
 /ConcurrentFeatures/nbproject/private/
 /ConcurrentFeatures/build/
+/Databases/nbproject/private/
+/Databases/build/
+/MyFamily/nbproject/private/
+/MyFamily/build/
